--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,22 @@
 /* calculator styles */
 
+body {
+  /* set body margin to 0 pixels */
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: hsl(0, 0%, 95%);
+}
+
 #calculator {
   max-width: 500px;
   overflow: hidden;
+  font-family: Arial, sans-serif;
+  /* set the background to dark black color, but not fully black */
+  /* background-color: hsl(0, 0%, 15%); */
+  /* set the border radius to 15 pixels */
 }
 
 #display {
@@ -28,6 +42,9 @@
 
 button {
   /* make each button a circle with 100px diameter */
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
   border: none;
   background-color: hsl(0, 0%, 30%);
   color: white;
