--- a/public/styles.css
+++ b/public/styles.css
@@ -82,10 +82,24 @@ button:active {
 
 #history {
   width: 100%;
-  padding: 20px;
   height: 95vh;
   min-height: 100px;
   overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  font-size: 3rem;
+  text-align: right;
+}
+
+#history-list {
+  padding-right: 30px;
+}
+
+#history li {
+  list-style-type: none;
+  padding: 10px;
+  color: white;
+  margin: 5px;
 }
 
 @media screen and (max-width: 500px) {
