--- a/public/styles.css
+++ b/public/styles.css
@@ -26,9 +26,8 @@ body {
   font-size: 80px;
   text-align: left;
   border: none;
-  /* color: white; */
   background-color: hsl(0, 0%, 20%);
-  color: hsl(0, 0%, 30%);
+  color: white;
 }
 
 #buttons {
